@@ -49,15 +49,18 @@
 com.pandar     
 │    └── java
 │       └── common                        // 公共资源
+│             └── annotation              // 注解
+│             └── aspect                  // 切面
 │             └── base                    // 基类
 │             └── constant                // 常量
+│             └── convert                 // 自定义数据转换
 │             └── enums                   // 枚举
 │             └── exception               // 异常
 │             └── group                   // 自定义分组  
 │       └── config                        // 配置
 │             └── async                   // 线程池配置
-│             └── convert                 // 自定义数据转换
 │             └── dict                    // 自定义字典数据
+│             └── excel                   // 自定义excel处理
 │             └── file                    // 自定义文件处理
 │             └── mybatis                 // mybatis-flex配置
 │             └── redis                   // redis配置
@@ -84,4 +87,54 @@ com.pandar
 ├── README.md                             // 项目说明文件
 ├── pom.xml                               // pom文件
 ```
-![](https://apebbs.cn/resources/%E4%B8%8D%E8%A6%81%E8%AE%B2%E4%BB%80%E4%B9%88%E5%BA%95%E5%B1%82%E5%8E%9F%E7%90%86.png)
+## 启动项目
+### 启动后端
+下载依赖的包。
+
+下载方式1：使用idea自带的maven操作功能下载。
+
+下载方式2：执行`mvn clear install`
+    
+启动入口：`com.pandar.Application`
+
+后端启动默认使用端口`9527`
+
+### 启动前端
+
+在`pandar-ui`目录中执行`npm install`
+
+`pandar-ui`目录中执行`vite --mode dev`
+
+## 项目部署
+
+### 后端部署
+项目打包,-P是指定使用哪个yml配置文件。
+```azure
+mvn clear package -D maven.test.skip=true -P dev 
+```
+执行后会在`pandar/target` 中生成jar包，然后将jar包上传至服务器。
+
+启动命令如下，有一些参数会覆盖yml文件中的配置，不需要可以去掉。
+```azure
+java -jar --enable-preview -Xmx512M -Xms256M pandar.jar --server.port=9527 --spring.data.redis.host=127.0.0.1 --spring.data.redis.password=123456 --spring.data.redis.port=6379 --spring.datasource.password=123456 --spring.datasource.url=jdbc:"mysql://127.0.0.1:3306/pandar?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useAffectedRows=true&rewriteBatchedStatements=true" --spring.datasource.username=root
+```
+### 前端部署
+在`pandar-ui`目录中，执行vite build --mode dev ，dev是指定的配置文件，然后会生成dist目录，将dist中的静态资源文件发布到nginx。
+
+## Docker
+### 构建镜像
+```azure
+docker build -t pandar:latest .
+```
+### 压缩tar包
+```azure
+docker save -o pandar.tar pandar:latest
+```
+### load镜像
+```azure
+docker load -i pandar.tar
+```
+### 运行镜像
+```azure
+docker run -d --name pandar -p 9527:9527 pandar:latest
+```
